[metadata]
name = TPLSp
version = 1.1.0
author = Arthur Lee
author_email = sangillee3rd@gmail.com
description = Python package for thresholded partial least squares
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sangillee/TPLSp
project_urls =
    Publication = https://doi.org/10.1016/j.crmeth.2022.100227
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src